crates/wac-parser/tests/resolution/fail/duplicate-use-in-world.wac
package foo:bar;

interface i {
    type x = u32;
}

world w {
    import x: func();
    use i.{x};
}
